Refactor embedded functions and enhance DownloadManager class for improved file handling and download capabilities

--- a/main_notebook.ipynb
+++ b/main_notebook.ipynb
@@ -153,11 +153,266 @@
     "    print(\"📦 Using embedded functions\")\n",
     "    USING_MODULES = False\n",
     "    \n",
-    "    # Embed all the original functions here to maintain compatibility\n",
-    "    exec(open('/content/drive/MyDrive/avance-download-manager/notebooks/embedded_functions.py').read() if os.path.exists('/content/drive/MyDrive/avance-download-manager/notebooks/embedded_functions.py') else '''\n",
-    "# Original embedded functions go here...\n",
-    "# [All the original utility functions, DownloadManager class, etc.]\n",
-    "    ''')\n",
+    "    # Embed all the essential functions here to maintain compatibility\n",
+    "    \n",
+    "    # Utility functions\n",
+    "    def validate_url(url):\n",
+    "        \"\"\"Validate URL format\"\"\"\n",
+    "        import re\n",
+    "        url_pattern = re.compile(\n",
+    "            r'^https?://'  # http:// or https://\n",
+    "            r'(?:(?:[A-Z0-9](?:[A-Z0-9-]{0,61}[A-Z0-9])?\\.)+[A-Z]{2,6}\\.?|'  # domain...\n",
+    "            r'localhost|'  # localhost...\n",
+    "            r'\\d{1,3}\\.\\d{1,3}\\.\\d{1,3}\\.\\d{1,3})'  # ...or ip\n",
+    "            r'(?::\\d+)?'  # optional port\n",
+    "            r'(?:/?|[/?]\\S+)$', re.IGNORECASE)\n",
+    "        return url_pattern.match(url) is not None\n",
+    "\n",
+    "    def format_size(bytes_size):\n",
+    "        \"\"\"Format bytes to human readable format\"\"\"\n",
+    "        if bytes_size == 0:\n",
+    "            return \"0B\"\n",
+    "        size_names = [\"B\", \"KB\", \"MB\", \"GB\", \"TB\"]\n",
+    "        i = int(math.floor(math.log(bytes_size, 1024)))\n",
+    "        p = math.pow(1024, i)\n",
+    "        s = round(bytes_size / p, 2)\n",
+    "        return f\"{s} {size_names[i]}\"\n",
+    "\n",
+    "    def format_speed(bytes_per_second):\n",
+    "        \"\"\"Format speed to human readable format\"\"\"\n",
+    "        return f\"{format_size(bytes_per_second)}/s\"\n",
+    "\n",
+    "    def get_filename_from_url(url):\n",
+    "        \"\"\"Extract filename from URL\"\"\"\n",
+    "        from urllib.parse import urlparse, unquote\n",
+    "        parsed_url = urlparse(url)\n",
+    "        filename = unquote(os.path.basename(parsed_url.path))\n",
+    "        if not filename or '.' not in filename:\n",
+    "            filename = f\"download_{int(time.time())}.bin\"\n",
+    "        return filename\n",
+    "\n",
+    "    # DownloadManager class\n",
+    "    class DownloadManager:\n",
+    "        \"\"\"Enhanced download manager with support for single and segmented downloads\"\"\"\n",
+    "        \n",
+    "        def __init__(self, config=None):\n",
+    "            self.config = config or CONFIG\n",
+    "            self.downloads = {}\n",
+    "            self.active_downloads = 0\n",
+    "            self.session = requests.Session()\n",
+    "            self.session.headers.update({\n",
+    "                'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.124 Safari/537.36'\n",
+    "            })\n",
+    "        \n",
+    "        def get_file_info(self, url):\n",
+    "            \"\"\"Get file information from URL headers\"\"\"\n",
+    "            try:\n",
+    "                response = self.session.head(url, allow_redirects=True, timeout=15)\n",
+    "                response.raise_for_status()\n",
+    "                \n",
+    "                info = {\n",
+    "                    'size': None,\n",
+    "                    'filename': None,\n",
+    "                    'content_type': None,\n",
+    "                    'supports_ranges': False,\n",
+    "                    'url': response.url  # Final URL after redirects\n",
+    "                }\n",
+    "                \n",
+    "                # Get file size\n",
+    "                if 'content-length' in response.headers:\n",
+    "                    info['size'] = int(response.headers['content-length'])\n",
+    "                \n",
+    "                # Get filename from Content-Disposition or URL\n",
+    "                if 'content-disposition' in response.headers:\n",
+    "                    cd = response.headers['content-disposition']\n",
+    "                    if 'filename=' in cd:\n",
+    "                        filename = cd.split('filename=')[1].strip('\"\\'')\n",
+    "                        info['filename'] = filename\n",
+    "                \n",
+    "                if not info['filename']:\n",
+    "                    info['filename'] = get_filename_from_url(url)\n",
+    "                \n",
+    "                # Check if server supports range requests\n",
+    "                info['supports_ranges'] = 'accept-ranges' in response.headers and response.headers['accept-ranges'] == 'bytes'\n",
+    "                \n",
+    "                # Get content type\n",
+    "                info['content_type'] = response.headers.get('content-type', 'application/octet-stream')\n",
+    "                \n",
+    "                return True, info\n",
+    "                \n",
+    "            except Exception as e:\n",
+    "                return False, {'error': str(e)}\n",
+    "        \n",
+    "        def download_file(self, url, destination_folder, filename=None, progress_callback=None):\n",
+    "            \"\"\"Download a single file with progress tracking\"\"\"\n",
+    "            try:\n",
+    "                # Validate URL\n",
+    "                if not validate_url(url):\n",
+    "                    return False, \"Invalid URL format\"\n",
+    "                \n",
+    "                # Get file info\n",
+    "                success, info = self.get_file_info(url)\n",
+    "                if not success:\n",
+    "                    return False, f\"Failed to get file info: {info.get('error', 'Unknown error')}\"\n",
+    "                \n",
+    "                # Determine filename\n",
+    "                if not filename:\n",
+    "                    filename = info['filename']\n",
+    "                \n",
+    "                # Create destination folder\n",
+    "                os.makedirs(destination_folder, exist_ok=True)\n",
+    "                \n",
+    "                file_path = os.path.join(destination_folder, filename)\n",
+    "                \n",
+    "                # Check if we should use segmented download\n",
+    "                file_size = info.get('size', 0)\n",
+    "                use_segments = (file_size > self.config['download']['min_file_size_for_segmentation'] \n",
+    "                              and info.get('supports_ranges', False))\n",
+    "                \n",
+    "                if use_segments:\n",
+    "                    return self._download_segmented(url, file_path, file_size, progress_callback)\n",
+    "                else:\n",
+    "                    return self._download_single(url, file_path, progress_callback)\n",
+    "                    \n",
+    "            except Exception as e:\n",
+    "                return False, f\"Download failed: {str(e)}\"\n",
+    "        \n",
+    "        def _download_single(self, url, file_path, progress_callback=None):\n",
+    "            \"\"\"Download file in a single stream\"\"\"\n",
+    "            try:\n",
+    "                with self.session.get(url, stream=True) as response:\n",
+    "                    response.raise_for_status()\n",
+    "                    \n",
+    "                    total_size = int(response.headers.get('content-length', 0))\n",
+    "                    downloaded = 0\n",
+    "                    start_time = time.time()\n",
+    "                    \n",
+    "                    with open(file_path, 'wb') as file:\n",
+    "                        for chunk in response.iter_content(chunk_size=self.config['download']['chunk_size']):\n",
+    "                            if chunk:\n",
+    "                                file.write(chunk)\n",
+    "                                downloaded += len(chunk)\n",
+    "                                \n",
+    "                                if progress_callback and total_size > 0:\n",
+    "                                    elapsed_time = time.time() - start_time\n",
+    "                                    speed = downloaded / elapsed_time if elapsed_time > 0 else 0\n",
+    "                                    progress = (downloaded / total_size) * 100\n",
+    "                                    \n",
+    "                                    progress_callback({\n",
+    "                                        'filename': os.path.basename(file_path),\n",
+    "                                        'progress': progress,\n",
+    "                                        'downloaded': downloaded,\n",
+    "                                        'total_size': total_size,\n",
+    "                                        'speed': speed,\n",
+    "                                        'status': 'downloading'\n",
+    "                                    })\n",
+    "                \n",
+    "                return True, f\"Downloaded: {os.path.basename(file_path)}\"\n",
+    "                \n",
+    "            except Exception as e:\n",
+    "                return False, f\"Download error: {str(e)}\"\n",
+    "        \n",
+    "        def _download_segmented(self, url, file_path, file_size, progress_callback=None):\n",
+    "            \"\"\"Download file using multiple segments\"\"\"\n",
+    "            try:\n",
+    "                num_segments = min(self.config['download']['max_segments'], \n",
+    "                                 max(1, file_size // (10 * 1024 * 1024)))  # 10MB per segment\n",
+    "                \n",
+    "                segment_size = file_size // num_segments\n",
+    "                ranges = []\n",
+    "                \n",
+    "                for i in range(num_segments):\n",
+    "                    start = i * segment_size\n",
+    "                    end = (i + 1) * segment_size - 1 if i < num_segments - 1 else file_size - 1\n",
+    "                    ranges.append((start, end))\n",
+    "                \n",
+    "                # Download segments\n",
+    "                segments_data = [None] * num_segments\n",
+    "                download_progress = [0] * num_segments\n",
+    "                start_time = time.time()\n",
+    "                \n",
+    "                def download_segment(segment_idx, start, end):\n",
+    "                    headers = {'Range': f'bytes={start}-{end}'}\n",
+    "                    headers.update(self.session.headers)\n",
+    "                    \n",
+    "                    response = requests.get(url, headers=headers, stream=True)\n",
+    "                    response.raise_for_status()\n",
+    "                    \n",
+    "                    data = b''\n",
+    "                    for chunk in response.iter_content(chunk_size=self.config['download']['chunk_size']):\n",
+    "                        if chunk:\n",
+    "                            data += chunk\n",
+    "                            download_progress[segment_idx] = len(data)\n",
+    "                            \n",
+    "                            if progress_callback:\n",
+    "                                total_downloaded = sum(download_progress)\n",
+    "                                elapsed_time = time.time() - start_time\n",
+    "                                speed = total_downloaded / elapsed_time if elapsed_time > 0 else 0\n",
+    "                                progress = (total_downloaded / file_size) * 100\n",
+    "                                \n",
+    "                                progress_callback({\n",
+    "                                    'filename': os.path.basename(file_path),\n",
+    "                                    'progress': progress,\n",
+    "                                    'downloaded': total_downloaded,\n",
+    "                                    'total_size': file_size,\n",
+    "                                    'speed': speed,\n",
+    "                                    'status': 'downloading'\n",
+    "                                })\n",
+    "                    \n",
+    "                    segments_data[segment_idx] = data\n",
+    "                \n",
+    "                # Use ThreadPoolExecutor for parallel downloads\n",
+    "                with ThreadPoolExecutor(max_workers=num_segments) as executor:\n",
+    "                    futures = []\n",
+    "                    for i, (start, end) in enumerate(ranges):\n",
+    "                        future = executor.submit(download_segment, i, start, end)\n",
+    "                        futures.append(future)\n",
+    "                    \n",
+    "                    # Wait for all segments to complete\n",
+    "                    for future in as_completed(futures):\n",
+    "                        future.result()\n",
+    "                \n",
+    "                # Combine segments\n",
+    "                with open(file_path, 'wb') as file:\n",
+    "                    for segment_data in segments_data:\n",
+    "                        file.write(segment_data)\n",
+    "                \n",
+    "                return True, f\"Downloaded (segmented): {os.path.basename(file_path)}\"\n",
+    "                \n",
+    "            except Exception as e:\n",
+    "                return False, f\"Segmented download error: {str(e)}\"\n",
+    "        \n",
+    "        def download_multiple(self, urls, destination_folder, max_workers=None, progress_callback=None):\n",
+    "            \"\"\"Download multiple files concurrently\"\"\"\n",
+    "            if not max_workers:\n",
+    "                max_workers = self.config['download']['max_workers']\n",
+    "            \n",
+    "            results = []\n",
+    "            \n",
+    "            def download_single_file(url):\n",
+    "                filename = get_filename_from_url(url)\n",
+    "                return self.download_file(url, destination_folder, filename, progress_callback)\n",
+    "            \n",
+    "            with ThreadPoolExecutor(max_workers=max_workers) as executor:\n",
+    "                future_to_url = {executor.submit(download_single_file, url): url for url in urls}\n",
+    "                \n",
+    "                for future in as_completed(future_to_url):\n",
+    "                    url = future_to_url[future]\n",
+    "                    try:\n",
+    "                        success, message = future.result()\n",
+    "                        results.append({\n",
+    "                            'url': url,\n",
+    "                            'success': success,\n",
+    "                            'message': message\n",
+    "                        })\n",
+    "                    except Exception as e:\n",
+    "                        results.append({\n",
+    "                            'url': url,\n",
+    "                            'success': False,\n",
+    "                            'message': f\"Error: {str(e)}\"\n",
+    "                        })\n",
+    "            \n",
+    "            return results\n",
     "\n",
     "# Configuration\n",
     "CONFIG = {\n",
