fixed main notebook

--- a/main_notebook.ipynb
+++ b/main_notebook.ipynb
@@ -1,6 +1,31 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "id": "b3ad6727",
+      "metadata": {},
+      "source": [
+        "# 🚀 Avance Download Manager v4.1\n",
+        "\n",
+        "**Professional Google Drive Download Manager with Advanced Features**\n",
+        "\n",
+        "## ✨ Features\n",
+        "- 🚀 **High-Speed Segmented Downloads** (up to 8 parallel connections)\n",
+        "- ⚡ **Multi-threaded Batch Downloads** (up to 20 concurrent files)\n",
+        "- 📦 **Archive Management** (ZIP, RAR, 7Z, TAR extraction & creation)\n",
+        "- 📁 **File Management** (Browse, organize, delete Google Drive files)\n",
+        "- 🎨 **Modern UI** (Adaptive light/dark theme support)\n",
+        "- 🔧 **Error Handling** (Robust recovery and validation)\n",
+        "\n",
+        "## 🎯 Quick Start\n",
+        "1. **Run Cell 1** → Mount Google Drive & Import Libraries\n",
+        "2. **Run Cell 2** → Initialize Core Functions\n",
+        "3. **Run Cell 3** → Launch Main Interface\n",
+        "\n",
+        "---"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "id": "ae2a685b",
@@ -8,7 +33,6 @@
         "cellView": "form",
         "id": "ae2a685b"
       },
-
       "outputs": [],
       "source": [
         "#@title 🚀 **CELL 1: SETUP** - Import Libraries & Mount Google Drive\n",
