Add quick download interface for immediate access to download functionality
- Implemented a basic UI that is always visible upon opening the notebook.
- Included checks for system readiness (Google Drive mounted and core functions loaded).
- Added quick download functionality with user feedback and error handling.
- Provided setup instructions and help features for user guidance.
- Enhanced user experience with modern UI elements and responsive design.

--- a/main_notebook.ipynb
+++ b/main_notebook.ipynb
@@ -2352,6 +2352,274 @@
         "    print(\"💡 Speed improvements should significantly increase your download speeds!\")\n",
         "    print(\"🎯 Try the 'High Speed (Segmented)' mode for large files!\")"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "a282e7e9",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#@title 🎨 **AUTO-DISPLAY UI** - Quick Interface (Always Visible)\n",
+        "#@markdown ### ⚡ This cell displays a basic interface immediately. For full functionality, run cells 1-3 in order.\n",
+        "\n",
+        "from IPython.display import display, HTML\n",
+        "import ipywidgets as widgets\n",
+        "\n",
+        "def create_quick_ui():\n",
+        "    \"\"\"Create a basic UI that's always visible when notebook opens\"\"\"\n",
+        "    \n",
+        "    # Check if system is ready\n",
+        "    try:\n",
+        "        # Check if we have the required modules\n",
+        "        drive_mounted = False\n",
+        "        functions_loaded = False\n",
+        "        \n",
+        "        try:\n",
+        "            import os\n",
+        "            drive_mounted = os.path.exists('/content/drive/MyDrive')\n",
+        "        except:\n",
+        "            pass\n",
+        "            \n",
+        "        try:\n",
+        "            functions_loaded = 'download_manager' in globals()\n",
+        "        except:\n",
+        "            pass\n",
+        "            \n",
+        "        if drive_mounted and functions_loaded:\n",
+        "            status_html = \"\"\"\n",
+        "            <div style=\"background: linear-gradient(135deg, #10b981, #059669); padding: 15px; border-radius: 10px; color: white; text-align: center; margin: 10px 0;\">\n",
+        "                <h3>✅ System Ready!</h3>\n",
+        "                <p>All components are loaded. You can scroll up to use the full interface in Cell 3.</p>\n",
+        "            </div>\n",
+        "            \"\"\"\n",
+        "        else:\n",
+        "            # Show setup instructions\n",
+        "            status_html = \"\"\"\n",
+        "            <div style=\"background: linear-gradient(135deg, #4f46e5, #7c3aed); padding: 20px; border-radius: 15px; color: white; text-align: center; margin: 10px 0; box-shadow: 0 8px 25px rgba(79, 70, 229, 0.3);\">\n",
+        "                <h2>🚀 Avance Download Manager</h2>\n",
+        "                <p style=\"font-size: 16px; margin: 15px 0;\">Professional Google Drive Download Manager</p>\n",
+        "                <div style=\"background: rgba(255,255,255,0.1); padding: 15px; border-radius: 10px; margin: 15px 0;\">\n",
+        "                    <h4>📋 Quick Setup (Required First Time)</h4>\n",
+        "                    <div style=\"text-align: left; display: inline-block;\">\n",
+        "                        <p>1. <strong>Run Cell 1</strong> → Mount Google Drive & Import Libraries</p>\n",
+        "                        <p>2. <strong>Run Cell 2</strong> → Initialize Core Functions</p>\n",
+        "                        <p>3. <strong>Run Cell 3</strong> → Launch Full Interface</p>\n",
+        "                    </div>\n",
+        "                </div>\n",
+        "                <p style=\"font-size: 14px; opacity: 0.9;\">After setup, this interface will show your download manager automatically!</p>\n",
+        "            </div>\n",
+        "            \"\"\"\n",
+        "        \n",
+        "        # Quick download interface (basic version)\n",
+        "        quick_url = widgets.Text(\n",
+        "            placeholder=\"🔗 Paste download URL here...\",\n",
+        "            description=\"Quick Download:\",\n",
+        "            style={'description_width': 'initial'},\n",
+        "            layout=widgets.Layout(width='70%', height='35px')\n",
+        "        )\n",
+        "        \n",
+        "        quick_btn = widgets.Button(\n",
+        "            description=\"⚡ Download\" if (drive_mounted and functions_loaded) else \"⚠️ Setup Required\",\n",
+        "            button_style='success' if (drive_mounted and functions_loaded) else 'warning',\n",
+        "            layout=widgets.Layout(width='25%', height='35px', margin='0 0 0 5%'),\n",
+        "            disabled=not (drive_mounted and functions_loaded)\n",
+        "        )\n",
+        "        \n",
+        "        quick_output = widgets.Output()\n",
+        "        \n",
+        "        def handle_quick_download(b):\n",
+        "            with quick_output:\n",
+        "                if not (drive_mounted and functions_loaded):\n",
+        "                    print(\"❌ Please run Cell 1 and Cell 2 first to set up the system.\")\n",
+        "                    print(\"📋 Instructions:\")\n",
+        "                    print(\"   1. Click on Cell 1 and press Shift+Enter\")\n",
+        "                    print(\"   2. Click on Cell 2 and press Shift+Enter\") \n",
+        "                    print(\"   3. Click on Cell 3 and press Shift+Enter\")\n",
+        "                    print(\"   4. Then try this quick download again\")\n",
+        "                    return\n",
+        "                    \n",
+        "                url = quick_url.value.strip()\n",
+        "                if not url:\n",
+        "                    print(\"❌ Please enter a URL\")\n",
+        "                    return\n",
+        "                    \n",
+        "                # Use the download manager if available\n",
+        "                try:\n",
+        "                    from urllib.parse import urlparse\n",
+        "                    if not all([urlparse(url).scheme, urlparse(url).netloc]):\n",
+        "                        print(\"❌ Invalid URL format\")\n",
+        "                        return\n",
+        "                        \n",
+        "                    print(f\"🚀 Starting download from: {url}\")\n",
+        "                    print(\"💡 For full interface with progress tracking, use Cell 3!\")\n",
+        "                    \n",
+        "                    # Basic download without progress (since we don't have the full interface)\n",
+        "                    destination = '/content/drive/MyDrive/Downloads'\n",
+        "                    if not os.path.exists(destination):\n",
+        "                        os.makedirs(destination)\n",
+        "                        \n",
+        "                    filename = os.path.basename(urlparse(url).path) or f\"download_{int(time.time())}.file\"\n",
+        "                    \n",
+        "                    # Simple progress widgets\n",
+        "                    progress = widgets.FloatProgress(value=0, max=100, description='Progress:', layout=widgets.Layout(width='100%'))\n",
+        "                    status = widgets.HTML(value=\"🔄 Starting...\")\n",
+        "                    \n",
+        "                    display(widgets.VBox([progress, status]))\n",
+        "                    \n",
+        "                    success = download_manager.download_file(url, destination, filename, progress, status, widgets.HTML())\n",
+        "                    \n",
+        "                    if success:\n",
+        "                        print(f\"✅ Downloaded successfully: {filename}\")\n",
+        "                        quick_url.value = \"\"\n",
+        "                    else:\n",
+        "                        print(\"❌ Download failed\")\n",
+        "                        \n",
+        "                except Exception as e:\n",
+        "                    print(f\"❌ Error: {str(e)}\")\n",
+        "                    print(\"💡 Try using the full interface in Cell 3 for better error handling\")\n",
+        "        \n",
+        "        quick_btn.on_click(handle_quick_download)\n",
+        "        \n",
+        "        # Action buttons row\n",
+        "        setup_btn = widgets.Button(\n",
+        "            description=\"🔧 Run Setup\",\n",
+        "            button_style='info',\n",
+        "            layout=widgets.Layout(width='120px', height='30px')\n",
+        "        )\n",
+        "        \n",
+        "        help_btn = widgets.Button(\n",
+        "            description=\"❓ Help\",\n",
+        "            button_style='primary', \n",
+        "            layout=widgets.Layout(width='80px', height='30px')\n",
+        "        )\n",
+        "        \n",
+        "        info_btn = widgets.Button(\n",
+        "            description=\"ℹ️ Features\",\n",
+        "            button_style='success',\n",
+        "            layout=widgets.Layout(width='100px', height='30px')\n",
+        "        )\n",
+        "        \n",
+        "        action_output = widgets.Output()\n",
+        "        \n",
+        "        def show_setup(b):\n",
+        "            with action_output:\n",
+        "                clear_output(wait=True)\n",
+        "                print(\"🔧 Download Manager Setup Instructions\")\n",
+        "                print(\"=\" * 45)\n",
+        "                print()\n",
+        "                print(\"📋 Step-by-step setup:\")\n",
+        "                print(\"1. Scroll up and find 'CELL 1: SETUP'\")\n",
+        "                print(\"2. Click on that cell and press Shift+Enter (or click the play button)\")\n",
+        "                print(\"3. Wait for Google Drive to mount\")\n",
+        "                print(\"4. Find 'CELL 2: CORE FUNCTIONS' and press Shift+Enter\")\n",
+        "                print(\"5. Find 'CELL 3: MAIN INTERFACE' and press Shift+Enter\")\n",
+        "                print()\n",
+        "                print(\"⏱️ Setup takes about 30-60 seconds total\")\n",
+        "                print(\"✅ After setup, this quick interface will be fully functional!\")\n",
+        "                print()\n",
+        "                print(\"🚨 Troubleshooting:\")\n",
+        "                print(\"• If you get errors, restart runtime and try again\")\n",
+        "                print(\"• Make sure you're connected to the internet\")\n",
+        "                print(\"• Grant permissions when Google Drive mounting asks\")\n",
+        "        \n",
+        "        def show_help(b):\n",
+        "            with action_output:\n",
+        "                clear_output(wait=True)\n",
+        "                print(\"❓ Quick Help - Download Manager\")\n",
+        "                print(\"=\" * 35)\n",
+        "                print()\n",
+        "                print(\"🎯 What this does:\")\n",
+        "                print(\"• Downloads files from any URL to your Google Drive\")\n",
+        "                print(\"• Supports high-speed downloads with multiple connections\")\n",
+        "                print(\"• Can download multiple files simultaneously\")\n",
+        "                print(\"• Extracts ZIP, RAR, 7Z archives automatically\")\n",
+        "                print(\"• Manages your Google Drive files\")\n",
+        "                print()\n",
+        "                print(\"📱 How to use:\")\n",
+        "                print(\"• Paste any download URL in the text box above\")\n",
+        "                print(\"• Click the Download button\")\n",
+        "                print(\"• Files are saved to /content/drive/MyDrive/Downloads\")\n",
+        "                print()\n",
+        "                print(\"🚀 For advanced features:\")\n",
+        "                print(\"• Use the full interface in Cell 3 after setup\")\n",
+        "                print(\"• Segmented downloads for large files\")\n",
+        "                print(\"• Batch downloading multiple URLs\")\n",
+        "                print(\"• File management and archive operations\")\n",
+        "        \n",
+        "        def show_features(b):\n",
+        "            with action_output:\n",
+        "                clear_output(wait=True)\n",
+        "                print(\"✨ Avance Download Manager Features\")\n",
+        "                print(\"=\" * 40)\n",
+        "                print()\n",
+        "                print(\"🚀 Download Features:\")\n",
+        "                print(\"• High-speed segmented downloads (up to 8x faster)\")\n",
+        "                print(\"• Concurrent batch downloads (up to 20 files)\")\n",
+        "                print(\"• Smart retry and error recovery\")\n",
+        "                print(\"• Custom filename support\")\n",
+        "                print(\"• Progress tracking with speed/ETA\")\n",
+        "                print()\n",
+        "                print(\"📦 Archive Support:\")\n",
+        "                print(\"• Extract: ZIP, RAR, 7Z, TAR, GZ, BZ2\")\n",
+        "                print(\"• Create: ZIP, TAR, TAR.GZ, 7Z archives\")\n",
+        "                print(\"• Password-protected archive support\")\n",
+        "                print(\"• Automatic extraction to Google Drive\")\n",
+        "                print()\n",
+        "                print(\"📁 File Management:\")\n",
+        "                print(\"• Browse Google Drive folders\")\n",
+        "                print(\"• Delete files and folders\")\n",
+        "                print(\"• Create new folders\")\n",
+        "                print(\"• View storage usage\")\n",
+        "                print()\n",
+        "                print(\"🎨 Interface Features:\")\n",
+        "                print(\"• Modern adaptive UI (light/dark theme)\")\n",
+        "                print(\"• Tabbed interface for different functions\")\n",
+        "                print(\"• Quick download from any cell\")\n",
+        "                print(\"• Real-time progress tracking\")\n",
+        "        \n",
+        "        setup_btn.on_click(show_setup)\n",
+        "        help_btn.on_click(show_help)\n",
+        "        info_btn.on_click(show_features)\n",
+        "        \n",
+        "        # Build the interface\n",
+        "        interface = widgets.VBox([\n",
+        "            widgets.HTML(status_html),\n",
+        "            widgets.HTML(\"<h4>⚡ Quick Download</h4>\"),\n",
+        "            widgets.HBox([quick_url, quick_btn], layout=widgets.Layout(margin='5px 0')),\n",
+        "            widgets.HTML(\"<div style='height: 10px;'></div>\"),\n",
+        "            widgets.HBox([setup_btn, help_btn, info_btn], layout=widgets.Layout(justify_content='center')),\n",
+        "            action_output,\n",
+        "            quick_output\n",
+        "        ], layout=widgets.Layout(padding='10px'))\n",
+        "        \n",
+        "        return interface\n",
+        "        \n",
+        "    except Exception as e:\n",
+        "        # Fallback interface if there are any issues\n",
+        "        error_interface = widgets.HTML(f\"\"\"\n",
+        "        <div style=\"background: #fee2e2; border: 1px solid #fecaca; padding: 20px; border-radius: 10px; margin: 10px 0;\">\n",
+        "            <h3 style=\"color: #dc2626; margin: 0 0 10px 0;\">⚠️ Interface Loading Error</h3>\n",
+        "            <p style=\"color: #991b1b;\">Could not load the quick interface. Error: {str(e)}</p>\n",
+        "            <p style=\"color: #991b1b;\"><strong>Solution:</strong> Run Cell 1, then Cell 2, then Cell 3 to use the full interface.</p>\n",
+        "        </div>\n",
+        "        \"\"\")\n",
+        "        return error_interface\n",
+        "\n",
+        "# Display the quick interface immediately\n",
+        "try:\n",
+        "    from IPython.display import clear_output\n",
+        "    clear_output(wait=True)\n",
+        "except:\n",
+        "    pass\n",
+        "\n",
+        "# Create and display the interface\n",
+        "quick_interface = create_quick_ui()\n",
+        "display(quick_interface)\n",
+        "\n",
+        "print(\"💡 Quick interface loaded! This will always appear when you open the notebook.\")\n",
+        "print(\"🔧 For full functionality, please run cells 1-3 in order.\")"
+      ]
     }
   ],
   "metadata": {
