--- a/main_notebook.ipynb
+++ b/main_notebook.ipynb
@@ -2337,20 +2337,7 @@
     "    </script>\n",
     "    \"\"\"))\n",
     "\n",
-    "    print(\"🎉 Enhanced Download Manager is ready!\")\n",
-    "    print(\"✨ New features added:\")\n",
-    "    print(\"  • 🚀 High-Speed Segmented Downloads (up to 8 segments)\")\n",
-    "    print(\"  • ⚡ Optimized single-connection downloads\")\n",
-    "    print(\"  • 📦 Enhanced chunk sizes (256KB instead of 8KB)\")\n",
-    "    print(\"  • 🔗 Connection pooling and session reuse\")\n",
-    "    print(\"  • 🌐 Better HTTP headers for server compatibility\")\n",
-    "    print(\"  • 🔧 Increased default concurrent downloads (5 instead of 3)\")\n",
-    "    print(\"  • Fixed 🔄 Refresh and 💾 Storage buttons\")\n",
-    "    print(\"  • Added 📦 Archives tab for ZIP/RAR operations\")\n",
-    "    print(\"  • Enhanced 📂 Files tab with 🗑️ Delete functionality\")\n",
-    "    print(\"  • Full support for light/dark theme adaptation\")\n",
-    "    print(\"💡 Speed improvements should significantly increase your download speeds!\")\n",
-    "    print(\"🎯 Try the 'High Speed (Segmented)' mode for large files!\")"
+    "    print(\"🎉 Enhanced Download Manager is ready!\")\n"
    ]
   }
  ],
